# CudaConvolution

./: CMakeLists.txt
include/: convolution.hpp  kernel.hpp  race.hpp
src/: convolution-seq.cpp  convolution.cu  kernel.cpp  main.cpp
